--- a/EngineeringScience - Alumni statics.html
+++ b/EngineeringScience - Alumni statics.html
@@ -22,7 +22,7 @@
       //.log to determine when you want the 
       //nav bar to stick.  
       console.log($(window).scrollTop())
-    if ($(window).scrollTop() > 90.67) {
+    if ($(window).scrollTop() > 105) {
       $('#nav_bar').addClass('navbar-fixed');
 	  $('#bugfix').addClass('blockm');
     }
@@ -47,7 +47,15 @@
 	<main>
 		<!--*************Title and drop down menu*****************-->
 		<header>
-			<h1 > Engineering Science <span style = "color:#fcba03">@ PITT</span> </h1>
+			<div class="gridcontainer8" style="">
+			<h1 style = "color:#fcba03; font-size:54px; margin:auto;margin:auto;font-weight:850;">PITT</h1>
+			<img src="images/verticalbar.png" alt="verticalbar" style = "max-width:15px; height:53.33px;justify-self:center;align-self:center;"></img>
+ 
+			<h1 style = " font-size:15px; grid-column:3/4; margin:auto; font-weight:bold;">Swanson School of Engineering<br>Engineering Science</h1>
+			
+			
+			</div>
+			
 			<div class="block"> </div>
 			<div id="bugfix"></div>
 			<div class="navbar gridcontainer"id = "nav_bar">
@@ -115,7 +123,7 @@
 				
 			</div>
 		</header>
-		
+		<div class='box'>
 		<div class ="section-wraper">
 			<h2>The most significant strength of Engineering Science program at Pitt:</h2>
 			<ul>
@@ -152,7 +160,7 @@
 			<div class="blockf"></div>
 			<div class="blockg"></div>
 		</div>
-		
+		</div>
 		
 		
 		
