--- a/EngineeringScience - Prospective Students.html
+++ b/EngineeringScience - Prospective Students.html
@@ -85,7 +85,7 @@
 			<div class="block"> </div>
 			<div id="bugfix"></div>
 			<div class="navbar gridcontainer"id = "nav_bar">
-				<div class="dropdown">
+				<div class="dropdown" style="opacity:1;">
 					<button class="dropbtn" style="justify-items: center;align-self:center;align-items: center">Research</button>
 					<div class="dropdown-content">
 						<a href="#">Mascaro Center for Sustainable Innovation (MCSI) </a>
