--- a/EngineeringScience - Aministrative contacts.html
+++ b/EngineeringScience - Aministrative contacts.html
@@ -62,8 +62,8 @@ function myFunction() {
 				<div class="dropdown">
 					<button class="dropbtn">Research</button>
 					<div class="dropdown-content">
-						<a href="#">Mascaro Center for Sustainable Innovation (MCSI) </a>
-						<a href="#">University Honors College</a>
+						<a href="EngineeringScience - MCSI.html">Mascaro Center for Sustainable Innovation (MCSI) </a>
+						<a href="EngineeringScience - UHC.html">University Honors College</a>
 						<a href="https://www.engineering.pitt.edu/Research/">SSOE Research Center</a>
 					</div>
 				</div>
