Update EngineeringScience - Prospective Students.html

--- a/EngineeringScience - Prospective Students.html
+++ b/EngineeringScience - Prospective Students.html
@@ -162,6 +162,13 @@ function myFunction() {
 				<p style="font-weight: none">There are three ways to get into Engineering Science Program at Pitt:</p>
 				<button class="collapsible">Direct application to ES at Pitt</button>
 					<div class="content">
+					<p>After applying to the Swanson School of Engineering, all first-year engineering students will complete the 
+					<a href="https://www.engineering.pitt.edu/First-Year/First-Year/Academic/First-Year-Academic/" target = "_blank">First-Year Engineering curriculum</a>.
+					At the end of their second semester, first-year engineering students will declare the engineering major 
+					they wish to pursue and then begin those courses the following year.
+					<br>Find out how to visit Pitt <a href="https://admissions.pitt.edu/visit/unscripted/" target = "_blank">here</a>, either virtually or in person!
+					<br>Learn more about the engineering programs and how to apply <a href="https://admissions.pitt.edu/eng/" target = "_blank">here</a>, or take a look at the resource guide.
+					</p>
 					<a href="https://admissions.pitt.edu/first-year-student/" class="button">MORE INFORMATION</a>
 			
 					</div>
@@ -169,6 +176,11 @@ function myFunction() {
 				<button class="collapsible">External trasnfer to ES at Pitt</button>
 					
 					<div class="content">
+					<p>Transferring from another school? Check out the <a href="https://admissions.pitt.edu/pitt-transfer-tool/" target = "_blank">Transfer Tool</a>
+					so see check which credits 
+					could transfer, or contact <a href="mailto: ssoetransfer@pitt.edu" target = "_blank">ssoetransfer@pitt.edu</a>
+					to schedule an appointment or request an unofficial credit evaluation.
+					</p>
 					<a href="https://www.engineering.pitt.edu/First-Year/First-Year/Transfer-Students/External-Transfer-Students/#:~:text=EXTERNAL%20TRANSFER%20GUIDELINES&text=Have%20a%20minimum%20GPA%20of,planning%20to%20major%20in%20Bioengineering." class="button">MORE INFORMATION</a>
 			
 					</div>
@@ -179,6 +191,12 @@ function myFunction() {
 					<button class="collapsible">Internal trasnfer to ES at Pitt</button>
 					
 					<div class="content">
+					<p>If already in the Swanson School of Engineering, students can speak to their academic advisor about switching their major to Engineering Science.  
+					If transferring from another school within Pitt, students must
+					meet these <a href="https://www.engineering.pitt.edu/First-Year/First-Year/Transfer-Students/Internal-Transfer-Students/" target="_blank">guidelines</a> to  
+					be accepted into the Engineering Science program.  
+					Contact <a href="mailto: ssoetransfer@pitt.edu" target = "_blank">ssoetransfer@pitt.edu</a> for further questions.
+					</p>
 					<a href="https://www.engineering.pitt.edu/First-Year/First-Year/Transfer-Students/Internal-Transfer-Students/" class="button">MORE INFORMATION</a>
 			
 					</div>
