--- a/EngineeringScience - Sample schedules.html
+++ b/EngineeringScience - Sample schedules.html
@@ -254,7 +254,7 @@ function myFunction() {
 			<ul style="font-weight:normal;">
 				<li>MATH 0240 – ANALYTIC GEOMETRY AND CALCULUS 3</li>
 				<li class="physics" class="math">MATH 0280 – INTRO TO MATRICES & LINEAR ALG</li>
-				<li>ENGER 0022 – MATERIALS STRUCTURE AND PROPERTIES</li>
+				<li class="MS">ENGER 0022 – MATERIALS STRUCTURE AND PROPERTIES</li>
 				<li class="ele">ECE 0031 – LINEAR CIRCUITS AND SYSTEMS 1</li>
 				<li>PHYS 0219 – BASIC LABORATORY PHYSICS SCIENCE AND ENGINEERING</li>
 				<li>MEMS 1085 – DEPARTMENTAL SEMINAR</li>
@@ -279,10 +279,11 @@ function myFunction() {
 			<h2 style="margin-top:0;margin-bottom:0;">Fifth Term</h2>
 			<div class="blockb"></div>
 			<ul style="font-weight:normal;">
-				<li>MEMS 1053 – STRUCTURE OF CRYSTALS AND DIFFRACTION</li>
-				<li>MEMS 1059 – PHASE EQUILIBRIA IN MULTI-COMPONENT MATERIALS</li>
+				<li class="MS">MEMS 1053 – STRUCTURE OF CRYSTALS AND DIFFRACTION</li>
+				<li class="MS_N">MEMS 1059 – PHASE EQUILIBRIA IN MULTI-COMPONENT MATERIALS</li>
 				<li class="physics">PHYS 0477 – INTRODUCTION TO THERMAL PHYSICS, RELATIVITY AND QUANTUM MECHANICS</li>
 				<li class="ele">ECE 1201 – ELECTNC MEASURMNTS & CRCTS LAB</li>
+				<li class="MS">MEMS 0040: Materials and Manufacturing (3 units)</li>
 				<li>Upper Level Physics – 3 Credits</li>
 				<li>MEMS 1085 – DEPARTMENTAL SEMINAR</li>
 				
@@ -297,6 +298,7 @@ function myFunction() {
 				<li class="ele">ECE 1212 – ELECTRONIC CIRCUIT DESIGN LAB</li>
 				<li class="ele">ECE 1247 – SEMICONDUCTOR DEVICE THEORY</li>
 				<li class="ele">ECE 0132 – DIGITAL LOGIC</li>
+				<li class="MS">MEMS 1059 – PHASE EQUILIBRIA IN MULTI-COMPONENT MATERIALS</li>
 				<li>PHYS 0481 – PRINCIPLES OF MODERN PHYSCIS 2</li>
 				<li>Humanity/Social Science Elective 4 – 3 Credits</li>
 				<li>MEMS 1085 – DEPARTMENTAL SEMINAR</li>
