Responsive design+polishing

--- a/EngineeringScience - Current Students.html
+++ b/EngineeringScience - Current Students.html
@@ -118,7 +118,7 @@ function myFunction() {
 		</header>
 		<div class="box">
 		<div class = "section-wraper">
-		 <h1 style="font-size: 32px">Undergraduate Resources</h1>
+		 <h1 class="resp_CS">Undergraduate Resources</h1>
 		 <!--
 			<button class="collapsible">Math Assistance Center</button>
 			<div class="content">
@@ -144,15 +144,15 @@ function myFunction() {
 			<div class="blockg"> </div>
 		-->
 			<div class="gridcontainer7">
-				<a href="https://admissions.pitt.edu/transfer/transfer-credit-gpa-guidelines/" style="grid-column:1/2"><img src="images/Transfercredit.jpg" alt="Transfer credit icon" style="max-width: 100%; height:auto"></a>
-				<a href="https://www.engineering.pitt.edu/Student/Student-Programs/International/" style="grid-column:3/4"><img src="images/Studyabroad.jpg" alt="Study abroad icon" style="max-width: 100%; height:auto"></a>
-				<a href="https://financialaid.pitt.edu/" style="grid-column:5/6"><img src="images/aid.jpg" alt="aid icon" style="max-width: 100%; height:auto"></a>
-				<a href="https://www.studentaffairs.pitt.edu/shs/online-portal-services/" style="grid-column:7/8"><img src="images/wellnesscenter.jpg" alt="wellness center icon" style="max-width: 100%; height:auto"></a>
-				<a href="https://www.studentaffairs.pitt.edu/cdpa/" style="grid-row:3/4; grid-column:1/2"><img src="images/Careercenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
-				<a href="https://www.writingcenter.pitt.edu/" style="grid-row:3/4; grid-column:3/4"><img src="images/writingcenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
-				<a href="http://www.ieee-iri.org/mathematics_subdomain/about/math-assistance-center.html" style="grid-row:3/4; grid-column:5/6"><img src="images/mac.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
-				<a href="EngineeringScience - minor.html" style="grid-row:3/4; grid-column:7/8"><img src="images/Minorc.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
-				<a href="EngineeringScience - Form.html" style="grid-row:5/6; grid-column:1/2"><img src="images/form.jpg" alt="Forms icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://admissions.pitt.edu/transfer/transfer-credit-gpa-guidelines/" style="margin: 5% 5%;" ><img src="images/Transfercredit.jpg" alt="Transfer credit icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://www.engineering.pitt.edu/Student/Student-Programs/International/" style="margin: 5% 5%;"><img src="images/Studyabroad.jpg" alt="Study abroad icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://financialaid.pitt.edu/"style="margin: 5% 5%;" ><img src="images/aid.jpg" alt="aid icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://www.studentaffairs.pitt.edu/shs/online-portal-services/"style="margin: 5% 5%;" ><img src="images/wellnesscenter.jpg" alt="wellness center icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://www.studentaffairs.pitt.edu/cdpa/" style="margin: 5% 5%;"><img src="images/Careercenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
+				<a href="https://www.writingcenter.pitt.edu/"style="margin: 5% 5%;" ><img src="images/writingcenter.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
+				<a href="http://www.ieee-iri.org/mathematics_subdomain/about/math-assistance-center.html" style="margin: 5% 5%;"><img src="images/mac.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
+				<a href="EngineeringScience - minor.html" style="margin: 5% 5%;"><img src="images/Minorc.jpg" alt="Career center icon" style="max-width: 100%; height:auto"></a>
+				<a href="EngineeringScience - Form.html" style="margin: 5% 5%;"><img src="images/form.jpg" alt="Forms icon" style="max-width: 100%; height:auto"></a>
 			</div>
 		</div>
 		</div>
