--- a/EngineeringScience - MCSI.html
+++ b/EngineeringScience - MCSI.html
@@ -41,6 +41,27 @@ function myFunction() {
   });
 });
 </script>
+<style>
+	.button1 {
+  background-color: white; 
+  color: #294704; 
+  border: 3px solid #294704;
+  width:100%;
+  min-height:30px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 15px;
+  vertical-align: middle;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  
+}
+.button1:hover {
+  background-color: #294704;
+  color: white;
+}
+</style>
   </head>
   <body>
 	<main>
@@ -112,26 +133,24 @@ function myFunction() {
 			</div>
 		</header>
 		<div class='box'>
-		<div class = "section-wraper">
-			<h2>Mascaro Center for Sustainable Innovation</h2>
+		<div class = "section-wraper" style="color:#294704">
+			<h2 style="background-image: url('images/greenback.jpg');width:100%;min-height:50px;background-size:cover;text-align:center;-webkit-text-stroke: 1.8px #294704; 
+
+     color: white;font-size:3vw; padding-top:30px;padding-bottom:30px;">Mascaro Center for Sustainable Innovation</h2>
 			<h3>Introduction</h3>
 			<p> Mascaro Center for Sustainable Innovation carries out the commitment of Pitt towards Sustainability. The center is dedicated to sustainability research and education, and students are able to find the suitable programs and research opportunities related to sustainability in the Center.</p>
-			<ul>
-			<li><a href="https://www.engineering.pitt.edu/MCSI/Research-Strengths/">Research Strengths</a></li>
-			<li><a href="https://www.engineering.pitt.edu/MCSI/Funded-Research/">MCSI funded researches</a></li>					
-			<li><a href="https://www.engineering.pitt.edu/MCSI/Summer-Research-Opportunities/">Summer research opportunities</a></li>
-			</ul>
+			<a href="https://www.engineering.pitt.edu/MCSI/Summer-Research-Opportunities/" class="button1"><span style="border-top:10px;border-bottom:10px;">Summer research opportunities</a>
+			<div style="height:2px;"></div>
+			<a href="https://www.engineering.pitt.edu/MCSI/Research-Strengths/" class="button1">Research Strengths</a>
+			<div style="height:2px;"></div>
+			<a href="https://www.engineering.pitt.edu/MCSI/Funded-Research/" class="button1">MCSI funded researches</a>
+			
 		
 			
 			
-			<div class="container">
-  
-  
-			
-			<img src="images/MCSI_pic1.png" alt="Engineering Science icon" style="display: block;margin-left: auto;margin-right: auto;width: 50%;">
 			
 			<div class="blockg"> </div>
-		</div>
+		
 		</div>
 		</div>
 		</body>
