Site appearance improvement

--- a/EngineeringScience - UHC.html
+++ b/EngineeringScience - UHC.html
@@ -9,8 +9,9 @@
 	
 	<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     
-	<link rel="stylesheet" href="css/responsivedesign.css">
+	
 	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/responsivedesign.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	
@@ -48,6 +49,27 @@ function myFunction() {
   }
 }
 </script>
+<style>
+	.button1 {
+  background-color: white; 
+  color: #000080; 
+  border: 3px solid #000080;
+  width:100%;
+  min-height:30px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 13px;
+  vertical-align: middle;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  
+}
+.button1:hover {
+  background-color: #000080;
+  color: white;
+}
+</style>
   </head>
   <body>
 	<main>
@@ -121,32 +143,35 @@ function myFunction() {
 		</header>
 		<div class='box'>
 		<div class = "section-wraper">
-			<h2>Pitt Honors College</h2>
+			<h2 style="background-image: url('images/UHCTOP.jpg');width:100%;min-height:50px;background-size:cover;text-align:center;
+
+     color: white;font-size:4vw; padding-top:30px;padding-bottom:30px;">Pitt Honors College</h2>
 			
 			<h4>Pitt honors college not only provides honors programs and distinction to students, but also plays a important role in researches.  </h4>
-			<ul>
+			
 			<p>There are several fellowships and scholarships available for independent or joint researches. A list of fellowships and relevant information can be found from the links below.</p>
 			
-			<li><a href="https://www.honorscollege.pitt.edu/fellowships">Fellowship</a></li>
-			<li><a href="https://www.honorscollege.pitt.edu/research-scholarships">Research scholarships and fellowships</a></li>
+			<a href="https://www.engineering.pitt.edu/MCSI/Summer-Research-Opportunities/" class="button1"><span style="border-top:10px;border-bottom:10px;">Fellowship</a>
+			<div style="height:2px;"></div>
+			<a href="https://www.honorscollege.pitt.edu/fellowships" class="button1"><span style="border-top:10px;border-bottom:10px;">Research scholarships and fellowships</a>
+			
 			<p>For students who are interested in researches and prepare to write thesis, Pitt honors college provides  bachelor of philosophy degree to students who meet certain requirements.</p>
-			<li><a href="https://www.honorscollege.pitt.edu/bphil">Bachelor of Philosophy (BPhil) degree</a></li>					
+			
+			<a href="https://www.honorscollege.pitt.edu/bphil" class="button1"><span style="border-top:10px;border-bottom:10px;">Bachelor of Philosophy (BPhil) degree</a>
+								
 			<p>There are several featured scholar communities related to certain topics. Students may find useful to join the community and get insightful information. </p>
-			<li><a href="https://www.honorscollege.pitt.edu/scholar-communities">Scholar Communities</a></li>
+			<a href="https://www.honorscollege.pitt.edu/scholar-communities" class="button1"><span style="border-top:10px;border-bottom:10px;">Scholar Communities</a>
+			
+			
 			<p>For students who are interested in publishing their works, there is a journal called Pittsburgh Undergraduate Review which is capable of publishing Honors College affiliated research and creative work.</p>
-			<li><a href="https://www.honorscollege.pitt.edu/research/pur">Pittsburgh Undergraduate Review (PUR)</a></li>
-			</ul>
+			<a href="https://www.honorscollege.pitt.edu/research/pur" class="button1"><span style="border-top:10px;border-bottom:10px;">Pittsburgh Undergraduate Review (PUR)</a>
+			
 		
 			
 			
-			<div class="container">
-  
-  
-			
-			<img src="images/UHC_pic1.png" alt="Engineering Science icon" style="display: block;margin-left: auto;margin-right: auto;width: 50%;">
 			
 			<div class="blockg"> </div>
-			</div>
+			
 			</div>
 			</div>
 		</body>
