Responsive design patch2.0//Debug//Updated EP sample schedules

--- a/EngineeringScience - Career.html
+++ b/EngineeringScience - Career.html
@@ -77,10 +77,12 @@ function myFunction() {
         chart.draw(data, options);
 		
       }
-	  $(window).resize(function(){
-			drawChart();
-	
-});
+	  
+ $(window).resize(function(){
+		
+	drawChart3();
+	drawChart();
+	});
     </script>
 	<script>
   $(document).ready(function() {
