--- a/EngineeringScience - Career.html
+++ b/EngineeringScience - Career.html
@@ -14,17 +14,18 @@
 	src="https://code.jquery.com/jquery-3.6.0.min.js"
 	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 	crossorigin="anonymous"></script>
-	<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
+	
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script>
+    function Trigger() {
+      var x = document.getElementById("Topnavbar");
+      if (x.className === "navstyle") {
+        x.className += " responsive";
+      } else {
+        x.className = "navstyle";
+      }
+    }
+  </script>
     <script type="text/javascript">
 	
 	
@@ -103,9 +104,10 @@ function myFunction() {
   });
 });
 </script>
-  </head>
+</head>
+<main>
   <body>
-	<main>
+	
 		<!--*************Title and drop down menu*****************-->
 		<header id="headerr">
 			
@@ -155,8 +157,8 @@ function myFunction() {
 		
 		
 		</footer>
-	</main>
+	
   </body>
-  
+</main>
 </html>
 		
