--- a/EngineeringScience - Current Students.html
+++ b/EngineeringScience - Current Students.html
@@ -15,16 +15,16 @@
 	integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
 	crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
-  }
-}
-</script>
+	<script>
+		function Trigger() {
+		var x = document.getElementById("Topnavbar");
+		if (x.className === "navstyle") {
+		  x.className += " responsive";
+		} else {
+		  x.className = "navstyle";
+		}
+	  }
+	</script>
 	<script>
   $(document).ready(function() {
   
