--- a/EngineeringScience - Program requirement.html
+++ b/EngineeringScience - Program requirement.html
@@ -263,15 +263,15 @@
 });
     </script>
 
-	<script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
+<script>
+	function Trigger() {
+    var x = document.getElementById("Topnavbar");
+    if (x.className === "navstyle") {
+      x.className += " responsive";
+    } else {
+      x.className = "navstyle";
+    }
   }
-}
 </script>
 	<script>
   $(document).ready(function() {
