--- a/EngineeringScience - UHC.html
+++ b/EngineeringScience - UHC.html
@@ -40,14 +40,14 @@
 
 </script>
 <script>
-function myFunction() {
-  var x = document.getElementById("myTopnav");
-  if (x.className === "topnav") {
-    x.className += " responsive";
-  } else {
-    x.className = "topnav";
+	function Trigger() {
+    var x = document.getElementById("Topnavbar");
+    if (x.className === "navstyle") {
+      x.className += " responsive";
+    } else {
+      x.className = "navstyle";
+    }
   }
-}
 </script>
 <style>
 	.button1 {
